stack/media/sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  # namespace: traefik
spec:
  ports:
    - port: 8989
      protocol: TCP
      # targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
